--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "start": "npx expo start",
     "lint": "npx expo lint",
     "lint:fix": "npx expo lint --fix",
-    "dev": "npx expo start"
+    "dev": "npx expo start --tunnel"
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.4.2",
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@tanstack/react-query": "^5.83.0",
+    "compression": "^1.8.1",
     "expo": "~54.0.33",
     "expo-constants": "~18.0.11",
     "expo-crypto": "^15.0.8",
@@ -34,13 +35,15 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.15.3",
     "react-native-web": "^0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "vary": "^1.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~19.1.10",
     "@expo/ngrok": "^4.1.3",
+    "@types/react": "~19.1.10",
     "babel-plugin-react-compiler": "^19.0.0-beta-e993439-20250117",
     "eslint": "^9.31.0",
     "eslint-config-expo": "~10.0.0",
